--- a/PyTorch_CNN_Classification_Custom_Dataset.ipynb
+++ b/PyTorch_CNN_Classification_Custom_Dataset.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "data_dir = './Spects/train'\n",
+    "data_dir = './Data/train'\n",
     "def load_split_train_test(datadir, valid_size = .2):\n",
     "    train_transforms = transforms.Compose([transforms.RandomResizedCrop(150),\n",
     "                                       transforms.ToTensor(),\n",
